# common_sipi_tools

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  REUSE.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml
common_sipi_tools/: __init__.py  pwl_linops.py
common_sipi_tools/util/: common.py  common_engr.py
data/PWL/: data1.pwl  data2.pwl  data3.pwl  data4.pwl  data5.pwl
docs/: how_to_guides.md  index.md  pwl_linops.md  pwl_linops_example.md  reference.md
explanation/: index.html
how_to_guides/: index.html
pwl_linops/: index.html
pwl_linops_example/: index.html
reference/: index.html
search/: search_index.json
site/: 404.html
site/pwl_linops/: index.html
site/search/: search_index.json
tutorials/: index.html
