# SPDX-FileCopyrightText: 2025 Yansheng Wang <ywang889@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "common-sipi-tools"
version = "0.1.3"
description = "Commonly used simple tools for signal integrity (SI) and power integrity (PI) work"
authors = ["Yansheng Wang"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
reuse = "^5.0.2"
pre-commit = "^4.0.1"
mkdocstrings-python = "^1.13.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
